# kiroshi-gui

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: lcd_driver.c  list_menu.c  primitive.c  runtime.c  tween.c
src/include/: lcd_driver.h
src/kiroshi/: chicago_font.h  hardware.h  lcd_driver.h  list_menu.h  primitives.h  runtime.h  tween.h
test/: main.c
test/lcd/: lcd_driver.c  main.c
test/sdl2/: sdl2.c  sdl2_hardware.c
